added placeContent props

--- a/100daysR2/Grid/text.html
+++ b/100daysR2/Grid/text.html
@@ -10,35 +10,34 @@
       margin: 0
     }
     .item {
-      border: 1px solid black;
-      background-color: rgb(226, 33, 33);
-    }
-    .container {
-      display: grid;
-      grid-template-columns: 2fr 2fr;
-      grid-template-rows: 50vh 50vh
-    }
-    .box1 {
-      background-color: #ff3300;
-      justify-content:  center;
-    }
-    .box2 {
-      background-color: rgb(119, 0, 255);
-      justify-content: start start
-    }
-    .box3{
-      background-color: aqua;
-     justify-content: end
-    }
-    .box4 {
-      background-color: rgb(38, 255, 0);
-     justify-content: stretch
-    }
-    .box1, .box2, .box3, .box4 {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 
-    }
+  border: 1px solid black;
+  background-color: rgb(226, 33, 33);
+}
+.container {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  grid-template-rows: 50vh 50vh
+}
+.box1 {
+  background-color: #ff3300;
+  place-content:  center;
+}
+.box2 {
+  background-color: rgb(119, 0, 255);
+  place-content: start
+}
+.box3{
+  background-color: aqua;
+  place-content: end
+}
+.box4 {
+  background-color: rgb(38, 255, 0);
+  place-content: stretch
+}
+.box1, .box2, .box3, .box4 {
+  display: grid;
+  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+}
   </style>
 </head>
 <body>
