place viewport as the first anatomy of svg

--- a/100daysR3_7-8-19/SVG.js/index.html
+++ b/100daysR3_7-8-19/SVG.js/index.html
@@ -7,7 +7,7 @@
   <title>SVG</title>
   <style>
     svg{
-      background: yellow
+      background: yellow;
     }
   </style>
 </head>
@@ -16,8 +16,11 @@
 
   <h1>SVG</h1>
 
-  <svg viewbox=" 0 0 100px 100px" >
-    <rect x='40' y='20'  width='150px'  height='50px' fill="red"></rect>
+  <div style="height: 100px; width: 100px; backgroundColor: blue" >
+
+  </div>
+  <svg  >
+    <rect x='40' y='20'  width='10px'  height='10px' fill="red"></rect>
   </svg>
 </body>
 </html>
