--- a/100daysR3_7-8-19/SVG.js/index.html
+++ b/100daysR3_7-8-19/SVG.js/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>SVG</title>
-  <style>
-    svg{
-      background: yellow;
-    }
-  </style>
-</head>
-<body>
-  
 
-  <h1>SVG</h1>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>SVG</title>
+    <style>
+      svg {
+        background: yellow;
+      }
 
-  <div style="height: 100px; width: 100px; backgroundColor: blue" >
+      .emptyDiv {
+        height: 200px;
+        width: 200px;
+        background-color: blue;
+      }
+    </style>
+  </head>
 
-  </div>
-  <svg  >
-    <rect x='40' y='20'  width='10px'  height='10px' fill="red"></rect>
-  </svg>
-</body>
+  <body>
+
+
+    <h1>SVG</h1>
+    <div class="emptyDiv">
+      <svg width="150px" height="150px">
+        <rect x='0' y='0' width='100px' height='100px' fill="red"></rect>
+      </svg>
+    </div>
+  </body>
+
 </html>
