added an example for viewport

--- a/100daysR3_7-8-19/SVG.js/index.html
+++ b/100daysR3_7-8-19/SVG.js/index.html
@@ -23,11 +23,12 @@
 
 
     <h1>SVG</h1>
-    <div class="emptyDiv">
-      <svg width="150px" height="150px">
-        <rect x='0' y='0' width='100px' height='100px' fill="red"></rect>
-      </svg>
-    </div>
+    <!-- <div class="emptyDiv"> -->
+      <!-- <svg width="150px" height="150px">
+        <rect x='0' y='0' width='200px' height='100px' fill="red"></rect>
+        <circle cx='50px' cy='120px' r='50px'></circle>
+      </svg> -->
+    <!-- </div> -->
   </body>
 
 </html>
