--- a/100daysR3_7-8-19/SVG.js/index.html
+++ b/100daysR3_7-8-19/SVG.js/index.html
@@ -24,10 +24,10 @@
 
     <h1>SVG</h1>
     <!-- <div class="emptyDiv"> -->
-      <!-- <svg width="150px" height="150px">
+      <svg width="150px" height="150px">
         <rect x='0' y='0' width='200px' height='100px' fill="red"></rect>
-        <circle cx='50px' cy='120px' r='50px'></circle>
-      </svg> -->
+        <circle cx='50px' cy='100px' r='50px'></circle>
+      </svg>
     <!-- </div> -->
   </body>
 
