--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -19,15 +19,28 @@
         margin-top: 100px;
         grid-gap: 100px;
       }
+      .group {
+        transform: rotate(12deg)
+      }
     </style>
   </head>
 
   <body>
-    
-    <svg width="200px" height="200px" viewbox='0 0 400 400' preserveAspectRatio="xMinYMin slice">
-      <rect x='0' y='0' width='200px' height='100px' fill="red"></rect>
-      <circle cx='50px' cy='150px' r='50px'></circle>
-      <circle cx='150px' cy='150px' r='50px'></circle>
+
+    <svg width="200px" height="200px" viewbox='0 0 200 200' preserveAspectRatio ="none">
+      <svg class="group">
+        <rect x='0' y='0' width='200px' height='100px' fill="red"></rect>
+        <circle cx='50px' cy='150px' r='50px'></circle>
+        <circle cx='150px' cy='150px' r='50px'></circle>
+      </svg>
+
+    </svg>
+    <svg width="200px" height="200px" viewbox='0 0 200 200' preserveAspectRatio="none">
+      <g  class="group">
+        <rect x='0' y='0' width='200px' height='100px' fill="red"></rect>
+        <circle cx='50px' cy='150px' r='50px'></circle>
+        <circle cx='150px' cy='150px' r='50px'></circle>
+      </g>
     </svg>
 
   </body>
