--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -19,29 +19,17 @@
         margin-top: 100px;
         grid-gap: 100px;
       }
-      .group {transform: rotate(20deg) }
-      .content { transform: rotate(-45deg) }
     </style>
   </head>
 
   <body>
 
-    <svg width="200px" height="200px" viewbox='0 0 200 200' preserveAspectRatio ="none">
-      <g class=" group ">
-        <rect x='0' y='0'  class='content' width='200px' height='100px' fill="red"></rect>
-        <circle cx='50px'  class='content'  cy='150px' r='50px'></circle>
-        <circle cx='150px' class='content'   cy='150px' r='50px'></circle>
-      </g>
-    </svg>
 
-    <svg width="200px" height="200px" viewbox='0 0 200 200' preserveAspectRatio ="none">
-      <svg class=" group ">
-        <rect x='0' y='0'  class='content' width='200px' height='100px' fill="red"></rect>
-        <circle cx='50px'  class='content'  cy='150px' r='50px'></circle>
-        <circle cx='150px' class='content'   cy='150px' r='50px'></circle>
+    <g>
+      <svg width="200px" height="200px" viewbox='0 0 200 200' preserveAspectRatio ="none">
+        <line x1="200" x2="150" y1="50" y2="150" stroke='pink'/>
       </svg>
-    </svg>
-
+    </g>
   </body>
 
 </html>
