--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -10,11 +10,13 @@
       svg {
         background: yellow;
       }
+
       body {
         display: flex;
         justify-content: center;
         margin-top: 50px
       }
+
       path {
         stroke: red;
         stroke-width: 5px
@@ -26,8 +28,10 @@
 
 
     <g>
-      <svg width="200px" height="200px" viewbox='0 0 200 200' preserveAspectRatio ="none">
-        <path  d='M50 50  A30 50 0 0 1 100 100'/>
+      <svg width="200px" height="200px" viewbox='0 0 200 200' preserveAspectRatio="none">
+        <path d='M50 50  L100 50 L 50 100' />
+        <path d='M0 0  l 40 0 0 100 ' />
+
       </svg>
     </g>
   </body>
