studied Cubic Bézier Curve

--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -19,7 +19,8 @@
 
       path {
         stroke: red;
-        stroke-width: 5px
+        stroke-width: 5px;
+        fill: transparent
       }
     </style>
   </head>
@@ -28,11 +29,10 @@
 
 
     <g>
-      <svg width="200px" height="200px" viewbox='0 0 200 200' preserveAspectRatio="none">
-        <path d='M50 50  L100 50 L 50 100' />
-        <path d='M0 0  l 40 0 0 100 ' />
-
+      <svg width="400px" height="400px" viewbox='0 0 400 400' preserveAspectRatio="none">
+        <path d='M50 50  C200 50, 50 50, 50 200' />
       </svg>
+
     </g>
   </body>
 
