getting into smoth cubic bezier

--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -33,7 +33,7 @@
         <path d='M150 50  C250 100, 50 200, 150 250' />
       </svg>
       <svg width="400px" height="400px" viewbox='0 0 400 400' preserveAspectRatio="none">
-        <path d='M150 50  c100 50, -100 150, 0 200' />
+        <!-- <path d='M150 50  c100 50, -100 150, 0 200' /> -->
       </svg>
 
     </g>
