--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -29,11 +29,11 @@
 
 
     <g>
-      <svg width="400px" height="400px" viewbox='0 0 400 400' preserveAspectRatio="none">
-        <path d='M150 50  C250 100, 50 200, 150 250' />
+      <svg width="700px" height="700px" viewbox='0 0 400 400' preserveAspectRatio="none">
+        <path d='M100 50  C200 100, 200 150, 100 200 S0 300, 100 350' />
       </svg>
-      <svg width="400px" height="400px" viewbox='0 0 400 400' preserveAspectRatio="none">
-        <!-- <path d='M150 50  c100 50, -100 150, 0 200' /> -->
+      <svg width="700px" height="700px" viewbox='0 0 400 400' preserveAspectRatio="none">
+        <path d='M100 50  c100 50, 100 100,  0 150 s -100 100 , 0 150' />
       </svg>
 
     </g>
