Added Smooth quadratic bezier curve content

--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -20,7 +20,7 @@
       path {
         stroke: red;
         stroke-width: 5px;
-        fill: pink
+        fill: transparent
       }
     </style>
   </head>
@@ -31,10 +31,10 @@
     <g>
       <svg width="700px" height="700px" viewbox='0 0 400 400' preserveAspectRatio="none">
         <path d='M100 50 Q 200 100, 100 150'  />
-        <path d='M250 50 q 100 50,  0 100 t 0 100  q 100 50,  0 100 t 0 100 ' />
+        <path d='M250 50 q 100 50,  0 100 t 0 100  ' />
       </svg>
       <svg width="700px" height="700px" viewbox='0 0 400 400' preserveAspectRatio="none">
-        <path d='M250 50 q 100 50,  0 100  q 100 50,  0 100 ' />
+        <path d='M250 50 q 100 50,  0 100 ' />
         <path d='M100 50 Q 200 100, 100 150  T 100 250 ' />
       </svg>
 
