worked on building svg arc shape

--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -30,11 +30,14 @@
 
     <g>
       <svg width="700px" height="700px" viewbox='0 0 350 350' preserveAspectRatio="none">
-        <path d='M100 100
+
+        <path d = ' M 100 200  A 50 200 90 0,1 200 , 200   '  />
+        <path d = ' M 100 200  A 50 200 45 0,1 200 , 200   '  />
+        <path d = ' M 100 200  A 50 200 20 0,1 200 , 200   '  />
+        <path d = ' M 100 200  A 50 200 10 0,1 200 , 200   '  />
+        <path d = ' M 100 200  A 50 200 0 0,1 200 , 200   '  />
+
         
-        a100,50 0 0,1 50,50
-        '  />
-        <!-- <ellipse cx="75" cy="75" rx="20" ry="50"/> -->
       </svg>
 
 
