--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -16,11 +16,9 @@
         justify-content: center;
         margin-top: 50px
       }
-
-      path {
-        stroke: red;
-        stroke-width: 5px;
-        fill: transparent
+      circle {
+        fill: red;
+        stroke: blue
       }
     </style>
   </head>
@@ -31,13 +29,7 @@
     <g>
       <svg width="700px" height="700px" viewbox='0 0 350 350' preserveAspectRatio="none">
 
-        <path d = ' M 100 200  A 50 200 90 0,1 200 , 200   '  />
-        <path d = ' M 100 200  A 50 200 45 0,1 200 , 200   '  />
-        <path d = ' M 100 200  A 50 200 20 0,1 200 , 200   '  />
-        <path d = ' M 100 200  A 50 200 10 0,1 200 , 200   '  />
-        <path d = ' M 100 200  A 50 200 0 0,1 200 , 200   '  />
-
-        
+      <circle cx='200' cy='200' r='100px'>
       </svg>
 
 
