added svg stroke-dashoffset

--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -23,20 +23,23 @@
     }
     .first {
       fill: red;
-      stroke-dasharray: 20%
+      stroke-dasharray: 200px;
     }
     .sec {
-      stroke-dasharray: 50px 20 5 30;
-      fill: purple
+      stroke-dasharray: 200px;
+      fill: purple;
+       stroke-dashoffset: 50px;
     }
     .third {
       fill: pink;
-      stroke-dasharray: 20 1 5
-    } 
+      stroke-dasharray: 200px;
+       stroke-dashoffset: 100px;
+       } 
     .fourth {
       fill: orange;
-      stroke-dasharray: 200px 
-    } 
+      stroke-dasharray: 200px;
+       stroke-dashoffset: 150px;
+      } 
   </style>
 </head>
 
