--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -33,22 +33,26 @@
 </head>
 
 <body>
-  <img src="svg-icon.svg" style="height:32px">
 
   <div class="empyty"></div>
 
   <svg width="400px" height="400px" viewbox='0 0 350 350' preserveAspectRatio="none">
-    <g>
-      <path d="M50,20 l40,40 l-40,40 l-40,-40 l40,-40
-        M50,40 l20,20 l-20,20 l-20,-20 l20,-20" style="stroke: #000000;
-        fill: red;
-        fill-rule: nonzero;
-     " />
-      <path d="M150,20 l40,40 l-40,40 l-40,-40 l40,-40
-        M150,40 l-20,20 l20,20 l20,-20 l-20,-20" style="stroke: #000000;
-        fill: #6666ff;
-        fill-rule: nonzero;" />
-    </g>
+
+
+    <defs>
+      <marker id="markerCircle" markerWidth="8" markerHeight="8" refX="5" refY="5">
+        <circle cx="5" cy="5" r="3" style="stroke: none; fill:#000000;" />
+      </marker>
+
+      <marker id="markerArrow" markerWidth="13" markerHeight="13" refX="2" refY="6" orient="auto">
+        <path d="M2,2 L2,11 L10,6 L2,2" style="fill: #000000;" />
+      </marker>
+    </defs>
+    <path d="M100,10 L150,10 L150,60" style="stroke: #6666ff; stroke-width: 1px; fill: none;
+      marker-start: url(#markerCircle);
+      marker-end: url(#markerArrow);
+    " />
+
   </svg>
 
 
