--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -29,6 +29,12 @@
     .first {
       stroke-linejoin: bevel;
     }
+
+    ;
+
+    marker {
+      fill: green;
+    }
   </style>
 </head>
 
@@ -44,14 +50,19 @@
         <circle cx="5" cy="5" r="3" style="stroke: none; fill:#000000;" />
       </marker>
 
-      <marker id="markerArrow" markerWidth="13" markerHeight="13" refX="2" refY="6" orient="auto">
+      <!-- <marker id="markerArrow" markerWidth="13" markerHeight="13" refX="2" refY="6" orient="auto">
         <path d="M2,2 L2,11 L10,6 L2,2" style="fill: #000000;" />
-      </marker>
+      </marker> -->
     </defs>
     <path d="M100,10 L150,10 L150,60" style="stroke: #6666ff; stroke-width: 1px; fill: none;
-      marker-start: url(#markerCircle);
+      marker-start: url(#markerArrow);
       marker-end: url(#markerArrow);
     " />
+
+    <marker id="markerArrow" markerWidth="13" markerHeight="13" refX="2" refY="6" orient="auto">
+      <!-- <path d="M2,2 L2,11 L10,6 L2,2" style="fill: red;" /> -->
+      <path d="M2,2 L2,11 L10,6 L2,2" style="fill: red;" />
+    </marker>
 
   </svg>
 
