--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -19,7 +19,7 @@
     }
 
     circle {
-      stroke-width: 10px;
+      stroke-width: 1px;
       stroke: blue;
       stroke-dasharray: 70;
       fill: transparent;
@@ -46,21 +46,19 @@
 
 
     <defs>
-      <marker id="markerCircle" markerWidth="8" markerHeight="8" refX="5" refY="5">
-        <circle cx="5" cy="5" r="3" style="stroke: none; fill:#000000;" />
+      <marker id="markerCircle" markerWidth="20" markerHeight="200" refX="10" refY="10" orient='auto'  >
+        <circle cx="20" cy="10" r="5" style="stroke: red; fill:transparent;" />
       </marker>
-
-      <!-- <marker id="markerArrow" markerWidth="13" markerHeight="13" refX="2" refY="6" orient="auto">
-        <path d="M2,2 L2,11 L10,6 L2,2" style="fill: #000000;" />
-      </marker> -->
     </defs>
-    <path d="M100,10 L150,10 L150,60" style="stroke: #6666ff; stroke-width: 1px; fill: none;
-      marker-start: url(#markerArrow);
-      marker-end: url(#markerArrow);
-    " />
 
-    <marker id="markerArrow" markerWidth="13" markerHeight="13" refX="2" refY="6" orient="auto">
-      <!-- <path d="M2,2 L2,11 L10,6 L2,2" style="fill: red;" /> -->
+    <path d="M100,10 L150,10 L150,60" style="
+    stroke: #6666ff; 
+    stroke-width: 1px; 
+    fill: none;
+    marker-start: url(#markerCircle);
+    marker-end: url(#markerArrow);" />
+
+    <marker id="markerArrow" markerWidth="13" markerHeight="13" refX="6" refY="6" orient="auto">
       <path d="M2,2 L2,11 L10,6 L2,2" style="fill: red;" />
     </marker>
 
